external/lrqa-middleware-testing-dashboard/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rdk-testing
  labels:
    name: rdk-testing
    app: device-testing-dashboard
